--- a/ride_fast_backend/src/main/resources/application.yml
+++ b/ride_fast_backend/src/main/resources/application.yml
@@ -1,12 +1,11 @@
 server:
-  port: 8080
+  port: 8081
 
 spring:
   datasource:
-    # url: jdbc:mysql://localhost:3306/ride_fast_db?createDatabaseIfNotExist=true
-    # username: root
-    # password: mysql
-    url: jdbc:postgresql://aws-0-ap-south-1.pooler.supabase.com:6543/postgres?user=postgres.mpdtafocfwffptvrdruq&password=KzpsKLu8.@qpJgT
+    url: jdbc:mysql://localhost:3306/ride_fast_db?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
+    username: root
+    password: podarindore
 
   jpa:
     hibernate:
